fixed link-out error on mobile

--- a/app/styles/partials/_content.scss
+++ b/app/styles/partials/_content.scss
@@ -393,7 +393,7 @@ img {
 				margin-bottom: -8px;
 				}
 				.label {
-					font-size: 2em;
+					font-size: 1.5em;
 					font-weight: 600;
 				}
 				.label-warning {
